--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">To Do List</string>
+    <string name="add">ADD</string>
+    <string name="add_to_do">ADD TO DO ..</string>
 </resources>
