--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">To Do List</string>
     <string name="add">ADD</string>
     <string name="add_to_do">ADD TO DO ..</string>
+    <string name="click_to_edit">Click to Edit</string>
+    <string name="long_press_to_delete">Long press to Delete</string>
 </resources>
